--- a/src/app/material-demo/material-demo.component.html
+++ b/src/app/material-demo/material-demo.component.html
@@ -1,28 +1,15 @@
 <mat-card>
+  <span *ngIf="isAuthenticated()">Welcome, {{ username }}</span>
+
   <mat-form-field>
     <mat-label>Enter Name</mat-label>
     <input matInput [(ngModel)]="name" />
   </mat-form-field>
 
+  <button *ngIf="isUser()" routerLink="/add-blog">Add Blog</button>
+
+
   <button mat-raised-button color="primary" (click)="toggleStyle()">Toggle Style</button>
-
-  <div *ngIf="name">
-    <p>Hello, {{ name }}!</p>
-  </div>
-
-  <div [ngSwitch]="status">
-    <p *ngSwitchCase="'active'">Status: Active</p>
-    <p *ngSwitchCase="'inactive'">Status: Inactive</p>
-    <p *ngSwitchDefault>Status: Unknown</p>
-  </div>
-
-  <ul>
-    <li *ngFor="let item of items" [ngClass]="{'highlight': isHighlighted(item)}">
-      {{ item }}
-    </li>
-  </ul>
-
-  <p [ngStyle]="{color: color}">Dynamic style text</p>
 
   <div class="blog-list">
     <div *ngFor="let blog of blogs" class="blog-item">
