feat: refactor and config

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="main">
   <div class="content">
-    <app-material-demo></app-material-demo>
+    <app-home></app-home>
   </div>
 </main>
 
