--- a/src/app/app-home/app-home.component.scss
+++ b/src/app/app-home/app-home.component.scss
@@ -1,7 +1,10 @@
-.highlight {
-  font-weight: bold;
-  color: red;
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
+
 .blog-list {
   display: flex;
   flex-wrap: wrap;
@@ -17,6 +20,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 
     .header-image {
       width: 100%;
