--- a/src/app/pages/blog-detail/blog-detail.component.html
+++ b/src/app/pages/blog-detail/blog-detail.component.html
@@ -1,6 +1,6 @@
 <div class="blog-detail">
   <h2>{{ blog?.title }}</h2>
-  <p>By {{ blog?.author }} on {{ blog?.publishedDate | date }}</p>
+  <p>By {{ blog?.author }} on {{ blog?.publishedDate }}</p>
   <div [innerHTML]="blog?.content"></div>
   <button mat-button (click)="goBack()">Zurück zur Übersicht</button>
 </div>
