feat: detail page and add page, material added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<main class="main">
-  <div class="content">
-    <app-home></app-home>
-  </div>
-</main>
-
+<app-header></app-header>
 <router-outlet></router-outlet>
+<footer>
+  <p>&copy; 2025 My Blog App. All rights reserved.</p>
+</footer>
