--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-sidebar></app-sidebar>
 <router-outlet></router-outlet>
 <footer>
   <p>&copy; 2025 My Blog App. All rights reserved.</p>
