--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -2,8 +2,8 @@
     <mat-sidenav #drawer class="sidenav" [mode]="isHandset ? 'over' : 'side'" [opened]="!isHandset">
         <mat-toolbar>Menu</mat-toolbar>
         <mat-nav-list>
-            <a mat-list-item routerLink="/overview" (click)="drawer.toggle()">Overview</a>
-            <a mat-list-item *ngIf="!isHandset" routerLink="/add-blog">Create Blog</a>
+            <a mat-list-item routerLink="/" (click)="isHandset ? drawer.toggle() : null">Overview</a>
+            <a mat-list-item *ngIf="isAuthenticated" routerLink="/add-blog">Create Blog</a>
             <button mat-button *ngIf="!isAuthenticated" (click)="login()">Login</button>
             <button mat-button *ngIf="isAuthenticated" (click)="logout()">Logout</button>
         </mat-nav-list>
