--- a/src/app/features/components/blog-list/blog-list.component.html
+++ b/src/app/features/components/blog-list/blog-list.component.html
@@ -1,46 +1,31 @@
 <div class="blog-list">
-    @if (loading) {
-        <div class="loading-container">
-            <mat-progress-spinner mode="indeterminate" color="primary"></mat-progress-spinner>
+    @if (!loading && blogs.length > 0) {
+        <div class="blog-grid">
+            @for (blog of blogs; track blog.id) {
+                <mat-card class="blog-card">
+                    @if (blog.headerImageUrl){
+                        <img mat-card-image [src]="blog.headerImageUrl" alt="Blog Image" />
+                    }
+                    <mat-card-title>{{ blog.title }}</mat-card-title>
+                    <mat-card-subtitle>By: {{ blog.author }}</mat-card-subtitle>
+                    <mat-card-content>
+                        <p>{{ blog.contentPreview }}</p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button mat-button color="primary" [routerLink]="'/blogs/' + blog.id">Read More</button>
+                    </mat-card-actions>
+                </mat-card>
+            }
         </div>
     }
-    @if (errorMessage) {
-        <mat-card class="error-card">
-            <mat-card-content>
-                <p>{{ errorMessage }}</p>
-            </mat-card-content>
-        </mat-card>
+
+    @if (loading) {
+        <mat-progress-spinner mode="indeterminate" color="primary"></mat-progress-spinner>
     }
-    @if (!loading && blogs.length > 0) {
-        <mat-grid-list cols="3" rowHeight="350px" gutterSize="20px">
-            @for (blog of blogs; track blog.id) {
-                <mat-grid-tile>
-                    <mat-card class="blog-card">
-                        <img mat-card-image [src]="blog.headerImageUrl" alt="Blog Image"/>
-                        <mat-card-header>
-                            <mat-card-title>{{ blog.title }}</mat-card-title>
-                            <mat-card-subtitle>By: {{ blog.author }}</mat-card-subtitle>
-                        </mat-card-header>
-                        <mat-card-content>
-                            <p>{{ blog.contentPreview }}</p>
-                        </mat-card-content>
-                        <mat-card-actions>
-                            <button mat-button color="primary">Read More</button>
-                            <div class="meta-info">
-                                <span>Likes: {{ blog.likes }}</span> |
-                                <span>Comments: {{ blog.comments }}</span>
-                            </div>
-                        </mat-card-actions>
-                    </mat-card>
-                </mat-grid-tile>
-            }
-        </mat-grid-list>
-    }
+
     @if (!loading && blogs.length === 0) {
-        <mat-card class="no-blogs">
-            <mat-card-content>
-                <p>No blogs found.</p>
-            </mat-card-content>
+        <mat-card>
+            <mat-card-content>No blogs found.</mat-card-content>
         </mat-card>
     }
 </div>
