--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,9 +1,14 @@
 <mat-toolbar color="primary" class="header-toolbar">
-  <button mat-icon-button class="menu-icon" (click)="onMenuClick()">
-    <mat-icon>menu</mat-icon>
-  </button>
   <span class="header-title">Blog App</span>
   <span class="spacer"></span>
-  <a mat-button routerLink="/blogs-overview" routerLinkActive="active">Overview</a>
-  <button mat-button (click)="onLogin()">Login</button>
+  @if (isMobile$ | async) {
+    <button mat-icon-button (click)="onMenuToggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  } @else {
+    <ng-container>
+      <a mat-button routerLink="/blogs-overview" routerLinkActive="active">Overview</a>
+      <button mat-button (click)="onLogin()">Login</button>
+    </ng-container>
+  }
 </mat-toolbar>
