--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,12 +1,8 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #sidenav mode="side" opened>
+  <mat-sidenav #sidenav mode="over" [opened]="isOpen" (closed)="onClose()">
     <mat-nav-list>
       <a mat-list-item routerLink="/blogs-overview" routerLinkActive="active">Overview</a>
       <button mat-list-item (click)="onLogin()">Login</button>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <button mat-button (click)="sidenav.toggle()" class="menu-button">☰</button>
-    <ng-content></ng-content>
-  </mat-sidenav-content>
 </mat-sidenav-container>
