--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,15 +1,3 @@
 .sidenav-container {
-  height: 100vh;
-}
-mat-sidenav {
-  width: 250px;
-}
-mat-sidenav-content {
-  padding: 16px;
-}
-.menu-button {
-  position: absolute;
-  top: 16px;
-  left: 16px;
-  z-index: 1000;
+  height: 100%;
 }
