--- a/src/app/features/components/blog-list/blog-list.component.html
+++ b/src/app/features/components/blog-list/blog-list.component.html
@@ -1,4 +1,5 @@
 <div class="blog-list">
+  <p>asdfasdfasdf</p>
     @if (!loading && blogs.length > 0) {
         <div class="blog-grid">
             @for (blog of blogs; track blog.id) {
