--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,17 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #sidenav mode="over" [opened]="isOpen" (closed)="onClose()">
+  <mat-sidenav
+    #sidenav
+    mode="side"
+    [opened]="true"
+    class="sidenav"
+  >
     <mat-nav-list>
       <a mat-list-item routerLink="/blogs-overview" routerLinkActive="active">Overview</a>
       <button mat-list-item (click)="onLogin()">Login</button>
     </mat-nav-list>
   </mat-sidenav>
+
+  <mat-sidenav-content class="content">
+    <ng-content></ng-content>
+  </mat-sidenav-content>
 </mat-sidenav-container>
