--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,16 +1,75 @@
+<mat-toolbar color="primary" class="main-toolbar">
+  @if (isMobile$ | async) {
+    <button
+      type="button"
+      aria-label="Toggle sidenav"
+      mat-icon-button
+      (click)="drawer.toggle()"
+    >
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+  }
+  <span>Title</span>
+  <span class="spacer"></span>
+  @if (authenticated().isAuthenticated) {
+    <button
+      mat-button
+      class="add-blog"
+      aria-label="Create a new Blog button"
+    >
+      Create a new Blog
+    </button>
+
+    <div
+      id="profileImage"
+      [innerHTML]="authService.getUserInitials()"
+      [matMenuTriggerFor]="beforeMenu"
+      matTooltip="You are logged in as {{
+        authService.getUser()?.preferred_username
+      }}"
+    ></div>
+    <mat-menu #beforeMenu="matMenu" xPosition="before">
+      <button mat-menu-item>
+        <mat-icon>account_circle</mat-icon>
+        <span>My Account</span>
+      </button>
+      <button mat-menu-item>
+        <mat-icon>favorite</mat-icon>
+        <span>My favorite blogs</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-menu-item (click)="logout()">
+        <mat-icon>logout</mat-icon>
+        <span>Log out</span>
+      </button>
+    </mat-menu>
+  } @else {
+    <button
+      mat-icon-button
+      class="example-icon login-icon"
+      aria-label="Login button"
+      (click)="login()"
+    >
+      <mat-icon>login</mat-icon>
+    </button>
+  }
+</mat-toolbar>
+
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav
-    #sidenav
-    mode="side"
-    [opened]="true"
+    #drawer
     class="sidenav"
+    [fixedInViewport]="true"
+    [attr.role]="(isMobile$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isMobile$ | async) ? 'over' : 'side'"
+    [opened]="(isMobile$ | async) === false"
   >
     <mat-nav-list>
-      <a mat-list-item routerLink="/blogs-overview" routerLinkActive="active">Overview</a>
+      <a mat-list-item href="#">Startpage</a>
     </mat-nav-list>
   </mat-sidenav>
-
-  <mat-sidenav-content class="content">
-    <ng-content></ng-content>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+    <div class="spacer"></div>
   </mat-sidenav-content>
 </mat-sidenav-container>
