--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-header [onMenuToggle]="toggleSidebar"></app-header>
-<app-sidebar [isOpen]="isSidebarOpen" [onClose]="closeSidebar">
-  <router-outlet></router-outlet>
-</app-sidebar>
+<app-sidebar class="header"></app-sidebar>
+<router-outlet></router-outlet>
+
