--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,6 @@ html, body {
   margin: 0;
   overflow: hidden; /* Prevent scrolling on the body */
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
