fix: isAuthenticated Guard fixed

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -25,3 +25,20 @@
         </button>
     }
 </mat-toolbar>
+
+<!--
+<mat-sidenav-container autosize>
+    <mat-sidenav [opened]="true" mode="side">
+        <mat-nav-list>
+            <a mat-list-item>
+        <span class="entry">
+          <mat-icon>house</mat-icon>
+          <span>Dashboard</span>
+        </span>
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>-->
