--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,46 +1,20 @@
-<mat-toolbar [class.mat-elevation-z3]="true">
-    <a href="/blogs-overview" style="text-decoration: none; color: inherit">
-        <span>Blog App</span>
-    </a>
-    <span class="spacer"></span>
-    @if (authenticated()) {
-        @if (canAddBlogs()) {
-            <a mat-button href="/create">
-                <mat-icon>add</mat-icon>
-                <span>Blogeintrag erstellen</span>
-            </a>
-        }
-        <button mat-button [matMenuTriggerFor]="menu">
-            <mat-icon>person</mat-icon>
-            <span>{{ userName() }}</span>
-        </button>
-        <mat-menu #menu="matMenu">
-            <button (click)="logout()" mat-button>
-                <mat-icon>logout</mat-icon>
-                <span>Log Out</span>
-            </button>
-        </mat-menu>
-    } @else {
-        <button (click)="login()" mat-button>
-            <mat-icon>login</mat-icon>
-            <span>Log In</span>
-        </button>
-    }
-</mat-toolbar>
-
-<!--
+<app-navigation-bar></app-navigation-bar>
 <mat-sidenav-container autosize>
+  @if (isMobile) {
     <mat-sidenav [opened]="true" mode="side">
-        <mat-nav-list>
-            <a mat-list-item>
-        <span class="entry">
-          <mat-icon>house</mat-icon>
-          <span>Dashboard</span>
-        </span>
+      <mat-nav-list>
+        @if (authenticated()) {
+          @if (canAddBlogs()) {
+            <a mat-button href="/create">
+              <mat-icon>add</mat-icon>
+              <span>Blogeintrag erstellen</span>
             </a>
-        </mat-nav-list>
+          }
+        }
+      </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content>
-        <router-outlet></router-outlet>
-    </mat-sidenav-content>
-</mat-sidenav-container>-->
+  }
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
