--- a/src/app/features/components/add-blog-page/add-blog-page.component.html
+++ b/src/app/features/components/add-blog-page/add-blog-page.component.html
@@ -17,7 +17,7 @@
         </mat-card-content>
         <mat-card-actions align="end">
             <button mat-button color="primary" (click)="resetForm()">Clear</button>
-            <button mat-raised-button color="accent" [disabled]="!blogForm.valid">Submit</button>
+            <button mat-raised-button color="accent" [disabled]="!blogForm.valid" (click)="onSubmit()">Submit</button>
         </mat-card-actions>
     </mat-card>
 </div>
