--- a/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -8,7 +8,7 @@
       @if (canAddBlogs()) {
         <a mat-button href="/create">
           <mat-icon>add</mat-icon>
-          <span>Blogeintrag erstellen</span>
+          <span>Add blog</span>
         </a>
       }
       <button mat-button [matMenuTriggerFor]="menu">
@@ -27,5 +27,10 @@
         <span>Log In</span>
       </button>
     }
+  }
+  @if (isMobile) {
+    <button mat-icon-button (click)="onToggleSidenav()">
+      <mat-icon>menu</mat-icon>
+    </button>
   }
 </mat-toolbar>
