--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,17 +1,36 @@
-<app-navigation-bar></app-navigation-bar>
+<app-navigation-bar (toggleSidenav)="toggleSidenav()">
+</app-navigation-bar>
 <mat-sidenav-container autosize>
   @if (isMobile) {
-    <mat-sidenav [opened]="true" mode="side">
-      <mat-nav-list>
-        @if (authenticated()) {
-          @if (canAddBlogs()) {
-            <a mat-button href="/create">
-              <mat-icon>add</mat-icon>
-              <span>Blogeintrag erstellen</span>
-            </a>
+    <mat-sidenav #sidenav mode="side" [(opened)]="opened" (opened)="events.push('open!')"
+                 (closed)="events.push('close!')">
+      <mat-toolbar>
+        <div class="button-column">
+          @if (authenticated()) {
+            @if (canAddBlogs()) {
+              <a mat-button href="/create">
+                <mat-icon>add</mat-icon>
+                <span>Add blog</span>
+              </a>
+            }
+            <button mat-button [matMenuTriggerFor]="menu">
+              <mat-icon>person</mat-icon>
+              <span>{{ userName() }}</span>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button (click)="logout()" mat-button>
+                <mat-icon>logout</mat-icon>
+                <span>Log Out</span>
+              </button>
+            </mat-menu>
+          } @else {
+            <button (click)="login()" mat-button>
+              <mat-icon>login</mat-icon>
+              <span>Log In</span>
+            </button>
           }
-        }
-      </mat-nav-list>
+        </div>
+      </mat-toolbar>
     </mat-sidenav>
   }
   <mat-sidenav-content>
