--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -30,3 +30,11 @@ mat-sidenav-content{
     padding-top: 4rem;
   }
 }
+.button-column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  width: 100%;
+  padding: 5em 16px 16px;
+}
