--- a/src/app/pages/blog-detail/blog-detail.component.html
+++ b/src/app/pages/blog-detail/blog-detail.component.html
@@ -13,3 +13,5 @@
 <div *ngIf="!isLoading && !blog" class="error">
   <p>Could not load blog details. Please try again later.</p>
 </div>
+
+<!-- besser flow control syntax verwenden anstelle von ngIf direktiven  -->
